Bug 155002 - CRASH: loading document
Summary: CRASH: loading document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-04-25 09:12 UTC by Xisco Faulí
Modified: 2023-05-23 15:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb bt (18.17 KB, text/plain)
2023-04-25 10:17 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-04-25 09:12:43 UTC
Steps to reproduce:
1. Open attachment 95994 [details] from bug 76312

-> after a few seconds LibreOffice crashes

Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a1388417b217430de456868c440817459697c4a8
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-04-25 09:13:31 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2023-02-01 08:07:39 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2023-02-01 10:48:40 +0000
commit b052ec2f2fbe0f3044ba824c064a280a5ee9cd7f (patch)
tree 04b44aded2c93a4c09c859564705c9600191499d
parent 6028e9fda96d0ed5da266b1c54a7755f7ba3408c (diff)
sw: introduce SwFlyFrame::IsFlySplitAllowed()

Bisected with: bibisect-linux64-7.6

Adding Cc: to Miklos Vajna
Comment 2 Julien Nabet 2023-04-25 10:17:41 UTC
Created attachment 186909 [details]
gdb bt

On pc Debian x86-64 with master sources updated today, I got an assertion.

I retrieved bt + some console logs just before the assertion.
Comment 3 Miklos Vajna 2023-05-03 12:10:17 UTC
 3c2e4d454aaabcd61593e670a90638a185046539 (sw floattable, crashtesting: fix PDF export of fdo72790-1.docx, part 1, 2023-04-25) is meant to fix this: multi-page floating tables, anchored in Writer sections.
Comment 4 Xisco Faulí 2023-05-03 14:10:55 UTC
(In reply to Miklos Vajna from comment #3)
>  3c2e4d454aaabcd61593e670a90638a185046539 (sw floattable, crashtesting: fix
> PDF export of fdo72790-1.docx, part 1, 2023-04-25) is meant to fix this:
> multi-page floating tables, anchored in Writer sections.

Hi Miklos,
Testing with 

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d5565b70bc6d3d263e1cc50fa1f343f4e1a428fe
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

The document hangs at import time, is it something you can also reproduce on your end ?
Comment 5 Miklos Vajna 2023-05-04 13:46:55 UTC
Ah, usually the easiest way to trigger import/layout problems is to convert to PDF on the cmdline, and that used to be broken (and fixed with the above commit). I didn't notice that opening the document interactively and waiting for the idle layout to complete still leads to the assert pointed out by Julien. I'll take a look.
Comment 6 Commit Notification 2023-05-23 14:46:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/807ad65661c122a33fccb4fd3453ef92c0e9129d

tdf#155002 sw floattable, split but not yet moved follow: fix GetNextFlyLeaf()

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.