sw floattable: fix missing table join when moving master fly to next page

A reduced bugdoc from tdf#155002 has 2 floating tables: one table on the
first page, second table on the second page. The second page had 2 fly
frames: the first row of the 2nd table in the first fly and the
remaining rows from the 2nd table in the second fly, and they were not
joined, which lead to overlapping text.

It seems what happens is that the fly is split: first row goes to the
first page, rest goes to the second page. Later we move the master fly
to the 2nd page as well, but we don't try to join the table, since the
master fly has no additional space. It's a circular problem: once we
split the fly, we limit the master fly size to what's necessary, so once
the 2 flys are on the same page, we don't move content from the follow
fly to the master fly because we believe it has no space... but it has
no space because the content is not moved.

Solve this problem similar to what the web view already does: in case a
table frame has a follow and the table frame is in a split fly that can
grow to host at least one follow, then try to grow it to host all
follows. This prevents layout loops, since we don't move content from a
follow fly to a master fly when it would not fit anyway, but allows
large enough master flys so table joining happens.

The crash with the original tdf#155002 bugdoc needs more work, still.

Change-Id: I411b21d796be82ab5600d66b600cb50c116db4e9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151956
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins